# stereoMagic

./: CMakeLists.txt  README.md  package.xml
launch/: stereo.launch  stereo_sim.launch
params/: dist.npy  mtx.npy  ret.npy  rvecs.npy  tvecs.npy
scripts/: camera_simulator.py  capture_images.py  hog_detect.py  hoglib.py  rectify.py  teste.py
src/: calib_camera.cpp  draw_boxes.cpp  stereo_node.cpp  stereo_tf_broadcaster.cpp  test.py
stereo/: CMakeLists.txt  package.xml  stereo.launch
stereo/params/: dist.npy  tvecs.npy
stereo/scripts/: camera_simulator.py  ret.npy  retify.py  rvecs.npy
stereo/src/: stereo_node.cpp
